[gd_scene load_steps=5 format=3 uid="uid://cmnn11bshth6g"]

[ext_resource type="Texture2D" uid="uid://drtlaesfdwfor" path="res://example/ui/back_fg9.png" id="1"]
[ext_resource type="Texture2D" uid="uid://btekexp2jh7kq" path="res://example/ui/panel_bg9.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ba1q1fbp0drn8" path="res://example/ui/back_bg9.png" id="3"]
[ext_resource type="Script" path="res://example/ui/UITemperature/UITemperature.gd" id="4"]

[node name="UITemperature" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 158.0
offset_bottom = 128.0
script = ExtResource("4")

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 148.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 10
text = "Temperature"

[node name="HLine" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 99.0
offset_right = 52.0
offset_bottom = 101.0
color = Color(0, 0.647059, 1, 1)

[node name="HLine2" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 80.0
offset_right = 52.0
offset_bottom = 82.0
color = Color(1, 0.584314, 0, 1)

[node name="Bar" type="TextureProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 25.0
offset_right = 44.0
offset_bottom = 118.0
max_value = 1.0
step = 0.01
value = 0.4
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("3")
texture_progress = ExtResource("1")
tint_progress = Color(1, 0.25098, 0.635294, 1)

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 56.0
offset_top = 27.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "Aircraft"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 56.0
offset_top = 75.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "Atmosphere"

[node name="TempAircraft" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 54.0
offset_top = 41.0
offset_right = 150.0
offset_bottom = 71.0
texture = ExtResource("3")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="InnerPanel" type="Control" parent="Panel/TempAircraft"]
clip_contents = true
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0

[node name="BG" type="ColorRect" parent="Panel/TempAircraft/InnerPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0705882, 0.0705882, 0.0745098, 1)

[node name="ValueLabel" type="Label" parent="Panel/TempAircraft/InnerPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
horizontal_alignment = 1

[node name="TempAir" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 54.0
offset_top = 89.0
offset_right = 150.0
offset_bottom = 119.0
texture = ExtResource("3")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="InnerPanel" type="Control" parent="Panel/TempAir"]
clip_contents = true
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0

[node name="BG" type="ColorRect" parent="Panel/TempAir/InnerPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0705882, 0.0705882, 0.0745098, 1)

[node name="ValueLabel" type="Label" parent="Panel/TempAir/InnerPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
horizontal_alignment = 1
